# Job_Application_Optimizer

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
scripts/: generate_cv_understanding.sh  generate_interview_prep.sh  run_batch.sh
src/job_application_optimizer/: __init__.py  cli.py  config.py  models.py
src/job_application_optimizer/generation/: __init__.py  cover_letter.py  interview_prep.py  prompt_bundle.py
src/job_application_optimizer/io/: __init__.py  csv_writer.py  folders.py  output_writer.py  run_logger.py  terminal.py
src/job_application_optimizer/jobs/: __init__.py  fetcher.py  metadata.py  parser.py  requirements.py
src/job_application_optimizer/llm/: __init__.py  client.py  json_parser.py  prompts.py  schemas.py  structured.py
src/job_application_optimizer/pipeline/: __init__.py  batch_runner.py
src/job_application_optimizer/resume/: __init__.py  cache.py  capability_inventory.py  optimizer.py  reader.py  understanding.py
src/job_application_optimizer/scoring/: __init__.py  ats.py  evidence.py  gap.py
tests/: test_resume_cache_invalidation.py  test_structured_llm_outputs.py
